name:                scplayer
version:             0.1.0.0
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/scplayer#readme
license:             BSD3
license-file:        LICENSE
author:              vendethiel
maintainer:          example@example.com
copyright:           2017 vendethiel
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable scplayer
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  extensions:          OverloadedStrings
  build-depends:       base >= 4.7 && < 5,
                       HTTP == 4000.3.3,
                       bytestring == 0.10.8.1,
                       network-uri == 2.6.1.0,
                       zlib == 0.6.1.2,
                       functor-monadic == 0.1.0.3,
                       monad-extras == 0.5.11,
                       xml-conduit == 1.3.5,
                       text == 1.2.2.1,
                       utf8-string == 1.0.1.1
